--- a/05-Guess-My-Number/starter/index.html
+++ b/05-Guess-My-Number/starter/index.html
@@ -5,28 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
-    <title>Guess My Number!</title>
+    <title>Gondoltam egy számra!</title>
   </head>
   <body>
     <header>
-      <h1>Guess My Number!</h1>
-      <p class="between">(Between 1 and 20)</p>
-      <button class="btn again">Again!</button>
+      <h1>Gondoltam egy számra!</h1>
+      <p class="between">(1 és 20 között)</p>
+      <button class="btn again">Új játék!</button>
       <div class="number">?</div>
     </header>
     <main>
       <section class="left">
         <input type="number" class="guess" />
-        <button class="btn check">Check!</button>
+        <button class="btn check">Tippelek!</button>
       </section>
       <section class="right">
-        <p class="message">Start guessing...</p>
-        <p class="label-score">💯 Score: <span class="score">20</span></p>
+        <p class="message">Tippelj egyet!</p>
+        <p class="label-score">💯 Pontszám: <span class="score">7</span></p>
         <p class="label-highscore">
-          🥇 Highscore: <span class="highscore">0</span>
+          🥇 Legtöbb pontod: <span class="highscore">0</span>
         </p>
       </section>
     </main>
+    <div class="medals">Éremgyűjteményed:</div>
     <script src="script.js"></script>
   </body>
 </html>
